# one-person-devs

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  opd-ctl.sh  opd.yaml.example  pyproject.toml  requirements.txt  restart.sh
alembic/: env.py
alembic/versions/: d302e020920b_initial.py
docs/: HISTORY.md  design.md  light_mode_plan.md  openclaw-opd-guide.md  research.md  research_competitive.md  v2_business_model.md  v2_technical_design.md
docs/daily-reports/: 2026-03-01.md  README.md
docs/v1/: research_se_practices.md
migrations/: env.py
migrations/versions/: 01338f5b4447_drop_composite_unique_allow_multi_.py  06f5e03834a8_add_input_hash_fields_to_stories.py  (+20 more)
opd/: __init__.py  config.py  db.py  main.py  middleware.py  utils.py
opd/api/: capabilities.py  (+14 more)
scripts/: README.md  generate_daily_report.py  generate_history.py
tests/: conftest.py  test_ai_message_storage.py  test_api.py  test_api_actions.py  test_api_caps.py  test_api_logs.py  test_api_projects.py  test_api_stories.py  test_build_overrides.py  test_capability_registry.py  test_capability_utils.py  test_config.py  test_context.py  test_feishu_provider.py  test_git_ops.py  test_hashing.py  test_light_mode.py  test_memory_assembler.py  test_memory_extractor.py  test_notifications.py  test_orchestrator.py  test_parallel_stories.py  test_registry.py  test_scanner.py  test_settings_import_export.py  test_stages.py  test_state_machine.py  test_stories_tasks.py  test_webhooks.py  test_workspace.py  test_workspace_lock.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+117 files in other folders)
